k8s/proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepak-proxy
  namespace: deepak-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepak-proxy
  template:
    metadata:
      labels:
        app: deepak-proxy
    spec:
      containers:
        - name: proxy
          image: deepak-proxy:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: deepak-proxy-svc
  namespace: deepak-apps
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: deepak-proxy
